src-tauri/cargo_output.txt
    Checking emmm2 v0.1.0 (E:\Dev\EMMM2NEW\src-tauri)
warning: unused import: `self`
 --> src\commands\preview_cmds.rs:2:38
  |
2 | use crate::services::ini::document::{self, IniDocument};
  |                                      ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ini_document`
   --> src\commands\preview_cmds.rs:115:17
    |
115 |     let files = ini_document::list_ini_files(mod_root)?;
    |                 ^^^^^^^^^^^^
    |                 |
    |                 use of unresolved module or unlinked crate `ini_document`
    |                 help: a struct with a similar name exists: `IniDocument`
    |
    = help: if you wanted to use a crate named `ini_document`, use `cargo add ini_document` to add it to your `Cargo.toml`

error[E0282]: type annotations needed
   --> src\commands\preview_cmds.rs:118:15
    |
118 |         .map(|path| IniFileEntry {
    |               ^^^^
119 |             filename: path
    |                       ---- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
118 |         .map(|path: /* Type */| IniFileEntry {
    |                   ++++++++++++

error[E0282]: type annotations needed
   --> src\commands\preview_cmds.rs:121:23
    |
121 |                 .map(|n| n.to_string_lossy().to_string())
    |                       ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
121 |                 .map(|n: /* Type */| n.to_string_lossy().to_string())
    |                        ++++++++++++

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ini_document`
   --> src\commands\preview_cmds.rs:130:5
    |
130 |     ini_document::read_ini_document(&ini_path)
    |     ^^^^^^^^^^^^
    |     |
    |     use of unresolved module or unlinked crate `ini_document`
    |     help: a struct with a similar name exists: `IniDocument`
    |
    = help: if you wanted to use a crate named `ini_document`, use `cargo add ini_document` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ini_document`
   --> src\commands\preview_cmds.rs:139:20
    |
139 |     let document = ini_document::read_ini_document(&ini_path)?;
    |                    ^^^^^^^^^^^^
    |                    |
    |                    use of unresolved module or unlinked crate `ini_document`
    |                    help: a struct with a similar name exists: `IniDocument`
    |
    = help: if you wanted to use a crate named `ini_document`, use `cargo add ini_document` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0282, E0433.
For more information about an error, try `rustc --explain E0282`.
warning: `emmm2` (lib) generated 1 warning
error: could not compile `emmm2` (lib) due to 5 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `emmm2` (lib test) generated 1 warning (1 duplicate)
error: could not compile `emmm2` (lib test) due to 5 previous errors; 1 warning emitted
